[package]
name = "zakaz"
version = "0.1.0"
authors = ["dmytzo <dmytro.halinovskyi@raccoongang.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = "*"
serde_json = "*"
serde_derive = "*"
dotenv = "0.15"
env_logger = "0.7"
tempfile = "3"
tokio = { version = "0.2", features = ["sync", "macros"]}
carapax = "*"